add basic login and register
