# src/routes/auth/index.ts
@@ -1,10 +1,13 @@
 import { Router } from "express"
-import { register, login} from "../../services/Auth"
+import { register, login, create_admin} from "../../services/Auth"
+import { Auth, UserIsAdmin } from "../../utils/middlewares"
 
 const router = Router()
 
 router.route("/register").post( register )
 
 router.route("/login").post( login )
+
+router.route("/create_admin").post( Auth, UserIsAdmin  )
 
 export default router
